[package]
authors = [
  "Jorge Aparicio <jorge@japaric.io>",
  "Per Lindgren <per.lindgren@ltu.se>",
  "Emil Fresk <emil.fresk@gmail.com>",
]
categories = ["data-structures", "no-std"]
description = "`static` friendly data structures that don't require dynamic memory allocation"
documentation = "https://docs.rs/heapless"
edition = "2018"
keywords = ["static", "no-heap"]
license = "MIT OR Apache-2.0"
name = "heapless"
repository = "https://github.com/japaric/heapless"
version = "0.7.16"

[features]
default = ["cas"]
cas = ["atomic-polyfill"]
ufmt-impl = ["ufmt-write"]
# read the docs before enabling: makes `Pool` Sync on x86_64
x86-sync-pool = []
# only for tests
__trybuild = []
# Enable larger MPMC sizes.
mpmc_large = []
# This flag has no version guarantee, the `defmt` dependency can be updated in a patch release
defmt-impl = ["defmt"]

[target.thumbv6m-none-eabi.dependencies]
atomic-polyfill = { version = "0.1.2", optional = true }

[target.riscv32i-unknown-none-elf.dependencies]
atomic-polyfill = { version = "0.1.4" }

[target.riscv32imc-unknown-none-elf.dependencies]
atomic-polyfill = { version = "0.1.4" }

[target.'cfg(target_arch = "avr")'.dependencies]
atomic-polyfill = { version = "0.1.8", optional = true }

[dependencies]
hash32 = "0.2.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
spin = "0.9.5"

[dependencies.serde]
version = "1"
optional = true
default-features = false

[dependencies.stable_deref_trait]
version = "1"
default-features = false

[dependencies.ufmt-write]
version = "0.1"
optional = true

[dev-dependencies.ufmt]
version = "0.1"

[dependencies.defmt]
version = ">=0.2.0,<0.4"
optional = true

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
all-features = true
